# Test-task-C-developer

./: .gitignore  CMakeLists.txt  README.md
include/: handle.h  hash_table.h  quick_sort.h  stat_data.h
src/: main.c  test.c  test_task.c
